# a2a-python

./: .coveragerc  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  README.md  development.md  noxfile.py  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/linters/: .jscpd.json  .markdownlint.json  .mypy.ini  .ruff.toml
.github/workflows/: auto-format.yml  linter.yaml  security.yml  spelling.yaml  unit-tests.yml  update-a2a-types.yml
examples/: run_blog_generator.py
examples/a2a-adk-app/: README.md
examples/a2a-mcp-app/: README.md
examples/dify/: README.md  __main__.py  agent_executor copy.py  agent_executor.py  agent_executor_blocking.py  bank_report_output.json  bank_statement.xlsx  dify_output.json  dify_raw_sse_1747762873.json  dify_raw_sse_1747906153.json  dify_raw_sse_response.json  pyproject.toml  test_bank_report_client.py  test_client.py
examples/helloworld/: __main__.py  agent_executor.py  test_client.py
examples/langgraph/: README.md  agent_executor.py  test_client.py
examples/multi_agent_system/: host_agent.py  main.py  plan_agent.py  report_agent.py  search_agent.py  test_client.py
examples/no-llm-framework/: noxfile.py  pyproject.toml
examples/travel_planner/: README.md  __main__.py  agent.py  agent_executor.py  config.json  loop_client.py  pyproject.toml
scripts/: format.sh  generate_types.sh
src/a2a/: __init__.py  _base.py  pydantic_base.py  types.py
tests/: test_types.py
tests/client/: test_auth_middleware.py  test_client.py  test_errors.py  (+1 more)
(+147 files in other folders)
